<resources>
    <string name="app_name">musikdroid</string>
    <string name="settings_title">settings</string>
    <string name="offline_tracks_title">offline songs</string>
    <string name="play_queue_title">play queue</string>
    <string name="albums_title">albums</string>
    <string name="albums_by_title">albums from \'%1$s\'</string>
    <string name="songs_title">songs</string>
    <string name="songs_from_category">songs from \'%1$s\'</string>
    <string name="genres_title">genres</string>
    <string name="genres_from_category">genres from \'%1$s\'</string>
    <string name="artists_title">artists</string>
    <string name="artists_from_category">artists from \'%1$s\'</string>
    <string name="playlists_title">playlists</string>
    <string name="connections_title">connections</string>
    <string name="button_pause">pause</string>
    <string name="button_play">play</string>
    <string name="button_prev">prev</string>
    <string name="button_seek_back">&lt; seek</string>
    <string name="button_next">next</string>
    <string name="button_seek_forward">seek &gt;</string>
    <string name="button_change_connection">change connection</string>
    <string name="button_tracks">songs</string>
    <string name="button_playlists">playlists</string>
    <string name="button_offline">offline</string>
    <string name="button_albums">albums</string>
    <string name="button_artists">artists</string>
    <string name="button_play_queue">play queue</string>
    <string name="button_vol_up">vol +</string>
    <string name="button_vol_down">vol -</string>
    <string name="button_shuffle">shuffle</string>
    <string name="button_random">random</string>
    <string name="button_mute">mute</string>
    <string name="button_repeat_off">repeat off</string>
    <string name="button_repeat_list">repeat list</string>
    <string name="button_repeat_track">repeat song</string>
    <string name="button_save">save</string>
    <string name="button_edit">edit</string>
    <string name="button_create">create</string>
    <string name="button_settings">settings</string>
    <string name="button_close">close</string>
    <string name="button_enable">enable</string>
    <string name="button_disable">disable</string>
    <string name="button_cancel">cancel</string>
    <string name="button_ok">ok</string>
    <string name="button_connect">connect</string>
    <string name="button_yes">yes</string>
    <string name="button_no">no</string>
    <string name="button_del">delete</string>
    <string name="button_save_as">save as</string>
    <string name="button_load">load</string>
    <string name="button_rename">rename</string>
    <string name="button_discard">discard</string>
    <string name="button_revert">revert</string>
    <string name="button_zero">zero</string>
    <string name="button_learn_more">learn more</string>
    <string name="button_view">view</string>
    <string name="button_diagnostics">diagnostics</string>
    <string name="invalid_password_dialog_title">invalid password</string>
    <string name="invalid_password_dialog_message">the server rejected your password.\n\nchange the password in the settings screen.</string>
    <string name="status_connecting">connecting</string>
    <string name="status_disconnected">disconnected</string>
    <string name="status_connected">connected to %1$s</string>
    <string name="status_volume">volume %1d%%</string>
    <string name="button_connected">connected</string>
    <string name="edit_connection_info">connection info:</string>
    <string name="edit_connection_hostname">ip address or hostname</string>
    <string name="edit_connection_port">main server port (default 7905)</string>
    <string name="edit_connection_http_port">audio streaming port (default 7906)</string>
    <string name="edit_connection_password">password (default empty)</string>
    <string name="transport_not_playing">not playing</string>
    <string name="search_hint">search</string>
    <string name="menu_settings">settings</string>
    <string name="menu_remote_manage">remote management</string>
    <string name="menu_genres">genres</string>
    <string name="menu_playlists">playlists</string>
    <string name="menu_remote_toggle">remote playback</string>
    <string name="menu_offline_tracks">offline songs</string>
    <string name="menu_add_to_playlist">add to playlist</string>
    <string name="menu_remove_from_playlist">remove from playlist</string>
    <string name="menu_show_tracks">songs</string>
    <string name="menu_show_albums">albums</string>
    <string name="menu_show_artists">artists</string>
    <string name="menu_show_artist">artist</string>
    <string name="menu_show_artist_albums">artist albums</string>
    <string name="menu_show_artist_tracks">artist songs</string>
    <string name="menu_show_genres">genres</string>
    <string name="menu_delete_playlist">delete</string>
    <string name="menu_rename_playlist">rename</string>
    <string name="menu_edit_playlist">edit</string>
    <string name="menu_play_playlist">play now</string>
    <string name="menu_categories">categories</string>
    <string name="menu_download_ringtone">download</string>
    <string name="unknown_value">&lt;unknown&gt;</string>
    <string name="snackbar_streaming_enabled">switched to streaming mode</string>
    <string name="snackbar_remote_enabled">switched to remote control mode</string>
    <string name="snackbar_saved_connection_preset">connection preset saved</string>
    <string name="main_switch_to_streaming_title">switch to streaming mode?</string>
    <string name="main_switch_to_streaming_message">playing offline tracks requires you to switch from remote mode to streaming mode.\n\ndo you want to switch now?</string>
    <string name="settings_playback_mode">playback mode:</string>
    <string name="settings_transcoder_bitrate">streaming transcoder bitrate:</string>
    <string name="settings_transcoder_format">streaming transcoder format:</string>
    <string name="settings_cache_size">streaming disk cache size:</string>
    <string name="settings_advanced">advanced:</string>
    <string name="settings_use_ssl">use ssl for server connections</string>
    <string name="settings_enable_album_art">use last.fm for missing album art</string>
    <string name="settings_enable_message_compression">enable message compression</string>
    <string name="settings_enable_streaming_playback">enable streaming playback</string>
    <string name="settings_enable_software_volume">use software volume while streaming</string>
    <string name="settings_disable_cert_validation">disable ssl certificate validation</string>
    <string name="settings_ssl_dialog_title">ssl information</string>
    <string name="settings_ssl_dialog_message">the musikcube server doesn\'t support ssl by default. it does, however, work very well with nginx and ssl termination. press \'learn more\' for configuration information.</string>
    <string name="settings_disable_cert_validation_title">certificate verification</string>
    <string name="settings_disable_cert_validation_message">there is really no reason to enable this setting. ssl without certificate validation opens you up to man-in-the-middle attacks, and only adds a false sense of security.\n\nare you sure you want to enable this setting?</string>
    <string name="settings_enable_notification_for_remote_playback">enable lock screen integration for remote playback</string>
    <string name="empty_show_offline_tracks_message">if you\'ve streamed music in the past you probably have some songs hanging around in the offline cache; you can play these songs until your device is back online.</string>
    <string name="settings_confirm_overwrite_title">confirm overwrite</string>
    <string name="settings_confirm_overwrite_message">a connection preset with this name already exists.\n\noverwrite existing preset?</string>
    <string name="settings_save_as_title">save as</string>
    <string name="settings_invalid_connection_title">invalid connection</string>
    <string name="settings_invalid_connection_message">one or more connection fields are invalid.\n\nensure you\'ve entered a valid name, hostname, and port numbers.</string>
    <string name="settings_invalid_connection_no_name_message">one or more connection fields are invalid.\n\nensure you\'ve entered a hostname and port numbers.</string>
    <string name="settings_confirm_delete_title">confirm delete</string>
    <string name="settings_confirm_delete_message">are you sure you want to delete \'%s\'?</string>
    <string name="settings_playback_engine">playback engine</string>
    <string name="settings_playback_engine_exo">ExoPlayer (stable)</string>
    <string name="settings_playback_engine_exo_gapless">ExoPlayer Gapless (default)</string>
    <string name="settings_playback_engine_mp">MediaPlayer (legacy)</string>
    <string name="settings_transfer_to_server_on_disconnect">transfer playback to server on headset disconnect</string>
    <string name="settings_disabled_tabbed_browsing">disable tabbed browsing</string>
    <string name="remote_settings_title">remote management</string>
    <string name="remote_settings_output_driver">output driver</string>
    <string name="remote_settings_output_device">output device</string>
    <string name="remote_settings_replaygain_mode">replaygain mode</string>
    <string name="remote_settings_preamp_gain">preamp gain</string>
    <string name="remote_settings_preamp_gain_format">%.1f dB</string>
    <string name="remote_settings_metadata_actions">music library</string>
    <string name="remote_settings_reindex_button">rescan</string>
    <string name="remote_settings_rebuild_button">rebuild</string>
    <string name="remote_settings_transport_type">playback transport</string>
    <string name="remote_settings_equalizer">equalizer</string>
    <string name="remote_settings_configure_eq_button">configure</string>
    <string name="remote_settings_eq_title">equalizer</string>
    <string name="remote_settings_eq_enabled">enable equalizer</string>
    <string name="remote_settings_eq_label_format">%d hz</string>
    <string name="remote_settings_eq_value_format">%d dB</string>
    <string name="remote_settings_environment_title">environment</string>
    <string name="remote_settings_version_format">server version: %s\napi version: %d\nsdk version: %d</string>
    <string name="diagnostics_title">diagnostics</string>
    <string name="diagnostics_app_runtime">app runtime: %s</string>
    <string name="diagnostics_wakelock_runtime">wakelock runtime: %s</string>
    <string name="diagnostics_wakelock_acquired">wakelock acquired? %s</string>
    <string name="diagnostics_system_service">system service: %s</string>
    <string name="transport_type_gapless">gapless</string>
    <string name="transport_type_crossfade">crossfade</string>
    <string name="replaygain_mode_disabled">disabled</string>
    <string name="replaygain_mode_track">track</string>
    <string name="replaygain_mode_album">album</string>
    <string name="title_ellipsis_mode">ellipsize titles:</string>
    <string name="ellipsis_mode_beginning">beginning</string>
    <string name="ellipsis_mode_middle">middle</string>
    <string name="ellipsis_mode_end">end</string>
    <string name="connections_no_presets">no saved connection presets.</string>
    <string name="empty_show_offline_tracks_button">show offline songs</string>
    <string name="empty_no_offline_tracks_message">oops, you don\'t seem to have any songs available offline.\n\nnext time you\'re connected, stream some music!</string>
    <string name="empty_no_items_format">you don\'t seem to have any %s here.</string>
    <string name="browse_type_tracks">songs</string>
    <string name="browse_type_albums">albums</string>
    <string name="browse_type_artists">artists</string>
    <string name="browse_type_genres">genres</string>
</resources>