<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_remote_toggle"
        app:showAsAction="always"
        android:title="@string/menu_remote_toggle"
        android:icon="@mipmap/ic_toolbar_remote" />

    <item
        android:id="@+id/action_playlists"
        app:showAsAction="never"
        android:title="@string/menu_playlists"/>

    <item
        android:id="@+id/action_genres"
        app:showAsAction="never"
        android:title="@string/menu_genres"/>

    <item
        android:id="@+id/action_settings"
        app:showAsAction="never"
        android:title="@string/menu_settings"/>

    <item
        android:id="@+id/action_offline_tracks"
        app:showAsAction="never"
        android:title="@string/menu_offline_tracks"/>

</menu>