<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/theme_foreground"
            android:text="@string/edit_connection_info"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="24dp">

            <EditText
                android:id="@+id/address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/edit_connection_hostname"
                android:inputType="textNoSuggestions" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="24dp">

            <EditText
                android:id="@+id/port"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/edit_connection_port"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="24dp">

            <EditText
                android:id="@+id/http_port"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/edit_connection_http_port"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="24dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/edit_connection_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/ssl_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/theme_foreground"
            android:layout_marginLeft="24dp"
            android:text="@string/settings_use_ssl"/>

        <CheckBox
            android:id="@+id/cert_validation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/theme_foreground"
            android:layout_marginLeft="24dp"
            android:visibility="visible"
            android:text="@string/settings_disable_cert_validation"/>

        <View
            android:layout_width="0dp"
            android:layout_height="16dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="24dp">

            <TextView
                android:id="@+id/button_save_as"
                style="@style/ConnectionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:text="@string/button_save_as"/>

            <TextView
                android:id="@+id/button_load"
                style="@style/ConnectionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:text="@string/button_load"/>

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="8dp"
            android:text="@string/settings_transcoder_bitrate"/>

        <Spinner
            android:id="@+id/transcoder_bitrate_spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="24dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="8dp"
            android:text="@string/settings_transcoder_format"/>

        <Spinner
            android:id="@+id/transcoder_format_spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="24dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="8dp"
            android:text="@string/settings_cache_size"/>

        <Spinner
            android:id="@+id/streaming_disk_cache_spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="24dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="8dp"
            android:text="@string/title_ellipsis_mode"/>

        <Spinner
            android:id="@+id/title_ellipsis_mode_spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="24dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/settings_advanced"/>

        <CheckBox
            android:id="@+id/album_art_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/theme_foreground"
            android:layout_marginLeft="24dp"
            android:text="@string/settings_enable_album_art"/>

        <CheckBox
            android:id="@+id/transfer_on_disconnect_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/theme_foreground"
            android:layout_marginLeft="24dp"
            android:text="@string/settings_transfer_to_server_on_disconnect"/>

        <CheckBox
            android:id="@+id/software_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/theme_foreground"
            android:layout_marginLeft="24dp"
            android:text="@string/settings_enable_software_volume"/>

        <TextView
            android:id="@+id/button_diagnostics"
            style="@style/ConnectionButton"
            android:text="@string/button_diagnostics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="24dp"/>

    </LinearLayout>

</ScrollView>